Replacing the standard with a custom controller

--- a/pages/HomePage.page
+++ b/pages/HomePage.page
@@ -1,10 +1,10 @@
-<apex:page standardController="Contact" extensions="HomePageController" showHeader="false" lightningStylesheets="true" sidebar="false">
+<apex:page controller="HomePageController" showHeader="false" lightningStylesheets="true" sidebar="false" action="{!getContact}">
     <apex:slds />
     <apex:form >
         <apex:pageBlock >
             <apex:pageBlockSection >
-                Hello, {!Contact.Name}! <br/>
-                <apex:commandButton value="Log out" styleClass="btn btn-success btn-sm" action="{!logOut}" />            
+                Hello, {!contact.Name}! <br/>
+                <apex:commandButton value="Log out" styleClass="btn btn-success btn-sm" action="{!logOut}" />           
             </apex:pageBlockSection>
         </apex:pageBlock>
     </apex:form>
