--- a/pages/LoginPage.page
+++ b/pages/LoginPage.page
@@ -1,4 +1,4 @@
-<apex:page standardstylesheets="false" showheader="false" sidebar="false" controller="LoginPageController" lightningStylesheets="true" >
+<apex:page showheader="false" sidebar="false" controller="LoginPageController" lightningStylesheets="true" >
     <apex:slds rendered="true"/>
     <center>
         <div  align="center" style="margin-top: 10%;">
